--- a/DL/PyTorch/frequently_used_piece.ipynb
+++ b/DL/PyTorch/frequently_used_piece.ipynb
@@ -34,6 +34,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nh9FYHrMIl0t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np \n",
+        "import pandas as pd \n",
+        "import matplotlib.pyplot as plt \n",
+        "import torch \n",
+        "import torch.nn as nn \n",
+        "import torchvision \n",
+        "import torchvision.transforms as transforms "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "bWQNVPNM-0VO",
