--- a/DL/PyTorch/frequently_used_piece.ipynb
+++ b/DL/PyTorch/frequently_used_piece.ipynb
@@ -30,8 +30,41 @@
         "colab_type": "text"
       },
       "source": [
-        "## 尽量是有共性的，少用只有这一个程序用的，往上摞"
+        "## 尽量是有共性的，少用只有这一个程序用的，往上摞\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m5HV-OiWxkUp",
+        "colab_type": "text"
+      },
+      "source": [
+        "### MxNet fashion mnist\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J7Q49WHhx8Q4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for X, y in test_iter:\n",
+        "    break\n",
+        "\n",
+        "true_labels = d2l.get_fashion_mnist_labels(y.asnumpy())\n",
+        "pred_labels = d2l.get_fashion_mnist_labels(net(X).argmax(axis=1).asnumpy())\n",
+        "titles = [true + '\\n' + pred for true, pred in zip(true_labels, pred_labels)]\n",
+        "\n",
+        "d2l.show_fashion_mnist(X[0:9], titles[0:9])"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
