CrossEntropy PyTorch 和 MXNet 对比

--- a/DL/PyTorch/04223.ipynb
+++ b/DL/PyTorch/04223.ipynb
@@ -32,7 +32,6 @@
         "colab": {}
       },
       "source": [
-        "import torch\n",
         "import numpy as np"
       ],
       "execution_count": 0,
@@ -152,20 +151,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RjBMgF9KXVAP",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "y_hat_t = torch.tensor(y_hat)\n",
-        "y_t = torch.tensor(y)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "E7l4DHUoA3fF",
         "colab_type": "code",
         "outputId": "2939f022-c854-446c-a7b0-8ed1e83e5b34",
@@ -175,7 +160,11 @@
         }
       },
       "source": [
+        "import torch\n",
         "from torch import nn \n",
+        "\n",
+        "y_hat_t = torch.tensor(y_hat)\n",
+        "y_t = torch.tensor(y)\n",
         "\n",
         "loss = nn.CrossEntropyLoss()\n",
         "l = loss(y_hat_t, y_t)\n",
@@ -237,6 +226,7 @@
         "\n",
         "y_hat_m = nd.array(y_hat)\n",
         "y_m = nd.array(y)\n",
+        "\n",
         "loss = gloss.SoftmaxCrossEntropyLoss()\n",
         "l = loss(y_hat_m, y_m)\n",
         "l"
