--- a/正则表达式.md
+++ b/正则表达式.md
@@ -3,6 +3,7 @@
 图像展示：https://regexper.com/  
 
 中文教程：https://github.com/ziishaned/learn-regex/blob/master/translations/README-cn.md  
+练习这个教程，练 3 遍，写简历上  
 
 菜鸟教程表格：https://www.runoob.com/regexp/regexp-syntax.html  
 
