--- a/正则表达式.md
+++ b/正则表达式.md
@@ -9,3 +9,7 @@
 
 知乎回答：https://www.zhihu.com/question/48219401  
 
+
+`[]` 表示种类 `[a-z]` 小写，`[A-Z]` 大写，`[tcp]` 字母 t、c、p 中的任意一个，`[0-9]` 数字  
+`{}` 表示个数 `{3,15}`，3 到 15 个字符  
+
