--- a/正则表达式.md
+++ b/正则表达式.md
@@ -10,6 +10,10 @@
 知乎回答：https://www.zhihu.com/question/48219401  
 
 
-`[]` 表示种类 `[a-z]` 小写，`[A-Z]` 大写，`[tcp]` 字母 t、c、p 中的任意一个，`[0-9]` 数字  
+`[]` 表示种类 `[a-z]` 小写，`[A-Z]` 大写，`[tcp]` 字母 t、c、p 中的任意一个，`[0-9]` 数字，`[^]`取否定  
 `{}` 表示个数 `{3,15}`，3 到 15 个字符  
+`^` 匹配开头  
+`$` 匹配结尾  
+`.` 单个字符  
+`*` 任意多个字符  
 
