--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,5 +1,5 @@
 
-
+正则表达式看不懂不是因为自己没有天分，而是因为缺少 regexper 这样的工具  
 图像展示：https://regexper.com/  
 
 中文教程：https://github.com/ziishaned/learn-regex/blob/master/translations/README-cn.md  
@@ -15,8 +15,9 @@
 `^` 匹配开头  
 `$` 匹配结尾  
 `.` 任意单个字符  
-`*` 任意多个字符 `[a-z]*` 任意小写字母开头的字符串  
+`*` 任意多个字符 等价于 `等价于{0,}`, `[a-z]*` 任意小写字母开头的字符串。`runo*b，可以匹配 runb、runoob、runoooooob 等`  
 `.*` 可以匹配所有字符串  
-`?` 表示可选，0 次或 1 次，出现不出现都可以  
+`+` + 前面的那个字符可以出现一次或多次 等价于 `{1,}`  `runo+b，可以匹配 runoob、runooob、runoooooob 等`   
+`?` 表示可选，0 次或 1 次，等价于 `{0,1}`，出现不出现都可以。`colou?r 可以匹配 color 或者 colour`    
 `|` 或运算符  
 
