--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,4 +1,5 @@
 
+
 正则表达式看不懂不是因为自己没有天分，而是因为缺少 regexper 这样的工具  
 图像展示：https://regexper.com/  
 
@@ -8,6 +9,9 @@
 菜鸟教程表格：https://www.runoob.com/regexp/regexp-syntax.html  
 
 知乎回答：https://www.zhihu.com/question/48219401  
+
+
+可以把长的正则表达式拆分成一个一个小的片段  
 
 
 `[]` 表示字符集，从里面包含的范围中取 `[a-z]` 小写，`[A-Z]` 大写，`[tcp]` 字母 t、c、p 中的任意一个，`[0-9]` 数字，`[^]`取否定  
