--- a/正则表达式.md
+++ b/正则表达式.md
@@ -4,7 +4,6 @@
 图像展示：https://regexper.com/  
 
 中文教程：https://github.com/ziishaned/learn-regex/blob/master/translations/README-cn.md  
-练习这个教程，练 3 遍，写简历上  
 
 菜鸟教程表格：https://www.runoob.com/regexp/regexp-syntax.html  
 
@@ -24,4 +23,5 @@
 `+` + 前面的那个字符可以出现一次或多次 等价于 `{1,}`  `runo+b，可以匹配 runoob、runooob、runoooooob 等`   
 `?` 表示可选，0 次或 1 次，等价于 `{0,1}`，出现不出现都可以。`colou?r 可以匹配 color 或者 colour`    
 `|` 或运算符  
+`\w` 匹配字母、数字、下划线。等价于 \[a-zA-Z0-9_]  
 
