--- a/正则表达式.md
+++ b/正则表达式.md
@@ -24,6 +24,6 @@
 `?` 表示可选，0 次或 1 次，等价于 `{0,1}`，出现不出现都可以。`colou?r 可以匹配 color 或者 colour`    
 `|` 或运算符  
 `\w` 匹配字母、数字、下划线。等价于 \[a-zA-Z0-9_]  
-`\d` 匹配一个数字字符。等价于 \[0-9]  
+`\d` 匹配一个数字字符。等价于 \[0-9]，`\d+` 表示一个或多个数字    
 
 
