--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,7 +1,10 @@
 
+文本无所不在，所以正则表达式的应用范围非常广泛；正则表达式是非常强大的，可以被反复使用的工具；正则表达式的解决方案相比于其他的方案是最简单的  
 
 正则表达式看不懂不是因为自己没有天分，而是因为缺少 regexper 这样的工具  
 图像展示：https://regexper.com/  
+
+https://regex101.com/  
 
 中文教程：https://github.com/ziishaned/learn-regex/blob/master/translations/README-cn.md  
 
@@ -17,13 +20,18 @@
 `{}` 表示个数 `{3,15}`，3 到 15 个字符  
 `^` 匹配开头  
 `$` 匹配结尾  
-`.` 任意单个字符  
-`*` 任意多个字符 等价于 `等价于{0,}`, `[a-z]*` 任意小写字母开头的字符串。`runo*b，可以匹配 runb、runoob、runoooooob 等`  
+`.` 任意单个字符`等价于{1}`  
+`*` 意思是可选的任意多的 等价于 `等价于{0,}`, `[a-z]*` 没有或任意小写字母开头的字符串。`runo*b，可以匹配 runb、runoob、runoooooob 等`  
 `.*` 可以匹配所有字符串  
-`+` + 前面的那个字符可以出现一次或多次 等价于 `{1,}`  `runo+b，可以匹配 runoob、runooob、runoooooob 等`   
+`+` + 前面的那个字符可以出现一次或多次 positive 等价于 `{1,}`  `runo+b，可以匹配 runoob、runooob、runoooooob 等`   
 `?` 表示可选，0 次或 1 次，等价于 `{0,1}`，出现不出现都可以。`colou?r 可以匹配 color 或者 colour`    
 `|` 或运算符  
-`\w` 匹配字母、数字、下划线。等价于 \[a-zA-Z0-9_]  
-`\d` 匹配一个数字字符。等价于 \[0-9]，`\d+` 表示一个或多个数字    
+`\w` 匹配字母、数字、下划线。等价于 \[a-zA-Z0-9_]，这是非常常见的组合，文件名，变量名    
+`\d` digit 匹配一个数字字符。等价于 \[0-9]，`\d+` 表示一个或多个数字    
+`\D` 等价于 \[^0-9]    
+`\s` 匹配空白符  
 
 
+
+正则表达式匹配总是有多种不同的解决办法，选择自己最熟悉的  
+正则表达式区分大小写  
