--- a/正则表达式.md
+++ b/正则表达式.md
@@ -30,6 +30,26 @@ https://regex101.com/
 `\s` 匹配空白符  
 
 
-
 正则表达式匹配总是有多种不同的解决办法，选择自己最熟悉的  
 正则表达式区分大小写  
+
+#### re 模块  
+
+re.sub()  
+
+re=regular expression(正则表达式)，sub=substitute(替换)；  
+
+re.sub是个正则表达式替换函数，用来实现通过正则表达式，实现比普通字符串的replace更加强大的替换功能；    
+
+re.sub(pattern, repl, string, count=0, flags=0)  
+
+pattern：模式串  
+repl：就是 replacement，被替换的字符串。  
+string：需要被替换的字符串  
+count：替换次数  
+
+re.sub(pattern, repl, string, count=0, flags=0)    
+`re.sub('中科院', "<TAG country='中国'>中科院</TAG>", '\t这是一个字符串，有中科院这个单词   ')
+Out[52]: "\t这是一个字符串，有<TAG country='中国'>中科院</TAG>这个单词   "`
+
+
