--- a/新电脑配置.md
+++ b/新电脑配置.md
@@ -39,11 +39,33 @@ jetbrains-agent.jar 并将它放置到 idea安装目录的\bin目录下
 输入[激活码](https://github.com/yananma/python_web/blob/main/%E4%B8%8D%E5%B8%B8%E7%94%A8/%E5%85%B6%E4%BB%96/pycharm%E6%BF%80%E6%B4%BB%E7%A0%81.md)；
   
 
+pycharm 远程连接  
+
+
+
 
 ### 安装 Xshell  
 
+百度网盘安装的是 Xshell 破解版中的 Xshell.6.0.0193  
+
+连接配置：文件 -> 新建 -> 先是连接 配置名称、主机和端口号 -> 然后是用户身份认证填写用户名和密码  
+
+
+### 安装 navicat  
+
+官网下载  
+
+连接 navicat：左上角点击连接 -> 选择 MySQL -> 选择 SSH 选项卡 -> 输入远程主机 IP、端口、用户名和密码（用户名和密码是远程主机的用户名和密码） -> 选择常规选项卡 -> 随便起一个连接名，写一个主机 IP 192.168.241.51（以后可能会改，不确定），端口 3306，输入数据库的用户名和密码 -> 测试连接   
 
 
 
-### 安装 
+### 安装 ApiPost  
+
+官网下载  
+
+
+
+
+
+
 
