--- a/新电脑配置.md
+++ b/新电脑配置.md
@@ -51,6 +51,11 @@ pycharm 远程连接
 连接配置：文件 -> 新建 -> 先是连接 配置名称、主机和端口号 -> 然后是用户身份认证填写用户名和密码  
 
 
+### 安装 Xftp  
+
+下载 Xshell 破解版中的 Xftp  
+
+
 ### 安装 navicat  
 
 官网下载  
