--- a/正则表达式.md
+++ b/正则表达式.md
@@ -110,6 +110,81 @@ compile 函数用于编译正则表达式，生成一个正则表达式（ Patte
 语法格式为：`re.compile(pattern[, flags])`  
 
 
+#### findall 函数  
+
+```python 
+In [9]: re.findall('the', 'the best things are the best.')
+Out[9]: ['the', 'the']
+```
+
+findall 返回一个列表  
+
+```python 
+In [1]: import re
+
+In [2]: RE_WORD = re.compile('\w+')
+
+In [3]: text = 'the trick william Potter is not minding that it hurts.'
+
+In [4]: RE_WORD.findall(text)
+Out[4]: 
+['the',
+ 'trick',
+ 'william',
+ 'Potter',
+ 'is',
+ 'not',
+ 'minding',
+ 'that',
+ 'it',
+ 'hurts']
+
+In [7]: text = 'the best things are the best.'
+
+In [8]: RE_WORD.findall(text)
+Out[8]: ['the', 'best', 'things', 'are', 'the', 'best']
+```
+
+
+#### finditer 函数  
+
+```python 
+In [10]: re.finditer('the', 'the best things are the best.')
+Out[10]: <callable_iterator at 0x7f7cea8b09d0>
+
+In [11]: it = re.finditer('the', 'the best things are the best.')
+
+In [12]: print(next(it))
+<re.Match object; span=(0, 3), match='the'>
+
+In [13]: print(next(it))
+<re.Match object; span=(20, 23), match='the'>
+
+In [14]: print(next(it))
+---------------------------------------------------------------------------
+StopIteration                             Traceback (most recent call last)
+<ipython-input-14-4d0222393be1> in <module>
+----> 1 print(next(it))
+
+StopIteration: 
+```
+
+
+
+re.match() 匹配第一个，从开头匹配。  
+
+re.search() 不是从开头匹配，返回第一个符合的。  
+
+re.findall() 返回所有，只有字符，没有位置，没有其他信息。  
+
+re.finditer() 返回迭代器。还有位置。  
+
+只要匹配一个就用 search() 或 match()  
+
+要所有，而且是只要字符串，就用 findall()  
+
+要所有字符串，而且还要位置等信息，就用 finditer()  
+
 
 
 
