--- a/正则表达式.md
+++ b/正则表达式.md
@@ -148,6 +148,25 @@ Out[8]: ['the', 'best', 'things', 'are', 'the', 'best']
 
 #### finditer 函数  
 
+查找 keyword_idx  
+
+```python 
+In [107]: re.finditer(r"(byd|比亚迪)", "比亚迪的名字是简称byd")
+Out[107]: <callable_iterator at 0x7f7c39b222d0>
+
+In [108]: for item in re.finditer(r"(byd|比亚迪)", "比亚迪的名字是简称byd"):
+     ...:     print(item)
+     ...: 
+<re.Match object; span=(0, 3), match='比亚迪'>
+<re.Match object; span=(9, 12), match='byd'>
+
+In [111]: for item in re.finditer(r"(byd|比亚迪)", "比亚迪的名字是简称byd"):
+     ...:     print(list(item.span()))
+     ...: 
+[0, 3]
+[9, 12]
+```
+
 ```python 
 In [10]: re.finditer('the', 'the best things are the best.')
 Out[10]: <callable_iterator at 0x7f7cea8b09d0>
