--- a/正则表达式.md
+++ b/正则表达式.md
@@ -27,7 +27,7 @@ https://regex101.com/
 `\w` 匹配字母、数字、下划线。等价于 \[a-zA-Z0-9_]，这是非常常见的组合，文件名，变量名    
 `\d` digit 匹配一个数字字符。等价于 \[0-9]，`\d+` 表示一个或多个数字    
 `\D` 等价于 \[^0-9]    
-`\s` 匹配空白符  
+`\s` 匹配空白符 s space  
 
 
 正则表达式匹配总是有多种不同的解决办法，选择自己最熟悉的  
