--- a/新电脑配置.md
+++ b/新电脑配置.md
@@ -50,6 +50,16 @@ pycharm 远程连接
 
 连接配置：文件 -> 新建 -> 先是连接 配置名称、主机和端口号 -> 然后是用户身份认证填写用户名和密码  
 
+hosts 配置  
+
+```
+127.0.0.1 transact.netsarang.com
+127.0.0.1 update.netsarang.com
+127.0.0.1 www.netsarang.com
+127.0.0.1 www.netsarang.co.kr
+127.0.0.1 sales.netsarang.com
+```
+
 
 ### 安装 Xftp  
 
