--- a/新电脑配置.md
+++ b/新电脑配置.md
@@ -22,7 +22,7 @@ https://www.126g.com/soft/2085.html#
 语言 -> 首选语言 -> 点击已安装手写输入图标 -> 进去删除微软输入法  
 
 
-### 安装 pycharm，并破解  
+### [安装 pycharm，并破解](https://mp.weixin.qq.com/s/9t1ywO13IVwWN5tUmKpD5g)     
 
 百度网盘下载 pycharm-professional-2020.1 文件和 2020.1版本破解补丁文件夹（不下 MP4 教程视频）  
 
