--- a/新电脑配置.md
+++ b/新电脑配置.md
@@ -22,26 +22,9 @@ https://www.126g.com/soft/2085.html#
 语言 -> 首选语言 -> 点击已安装手写输入图标 -> 进去删除微软输入法  
 
 
-### [安装 pycharm，并破解](https://mp.weixin.qq.com/s/9t1ywO13IVwWN5tUmKpD5g)     
+### 安装破解 PyCharm   
 
-百度网盘下载 pycharm-professional-2020.1 文件和 2020.1版本破解补丁文件夹（不下 MP4 教程视频）  
-
-jetbrains-agent.jar 并将它放置到 idea安装目录的\bin目录下  
-
-进入idea软件界面后，点击激活窗口的“Evaluate for free”免费试用；  
-
-进入到项目界面后，点击idea最上面的菜单栏中的 “Help” -> “Edit Custom VM Options …”。   
-
-在打开的vmoptions编辑窗口末行添加：-javaagent:你idea的安装目录\jetbrains-agent.jar  
-
-修改完配置文件之后重启idea；  
-
-输入[激活码](https://github.com/yananma/python_web/blob/main/%E4%B8%8D%E5%B8%B8%E7%94%A8/%E5%85%B6%E4%BB%96/pycharm%E6%BF%80%E6%B4%BB%E7%A0%81.md)；
-  
-
-pycharm 远程连接  
-
-
+百度网盘    
 
 
 ### 安装 Xshell  
