--- a/正则表达式.md
+++ b/正则表达式.md
@@ -183,6 +183,25 @@ In [3]: re.search('http:(.*?)\'', s).group()[:-1]
 Out[3]: 'http://www.iesdouyin.com/share/video/7107858239643045124'
 ```   
 
+### 多个连续的空行换成一个空行   
+
+```python 
+In [22]: s = "第一段\n\n\n\n\n第二段"
+
+In [23]: s
+Out[23]: '第一段\n\n\n\n\n第二段'
+
+In [24]: import re
+
+In [25]: s = "第一段\n\n\n\n\n第二段"
+
+In [26]: s
+Out[26]: '第一段\n\n\n\n\n第二段'
+
+In [27]: re.sub('(\n)+', '\n', s)
+Out[27]: '第一段\n第二段'
+``` 
+
 
 文本无所不在，所以正则表达式的应用范围非常广泛；正则表达式是非常强大的，可以被反复使用的工具；正则表达式的解决方案相比于其他的方案是最简单的  
 
