--- a/正则表达式.md
+++ b/正则表达式.md
@@ -198,7 +198,7 @@ In [25]: s = "第一段\n\n\n\n\n第二段"
 In [26]: s
 Out[26]: '第一段\n\n\n\n\n第二段'
 
-In [27]: re.sub('(\n)+', '\n', s)
+In [27]: re.sub('\n+', '\n', s)
 Out[27]: '第一段\n第二段'
 ``` 
 
