--- a/正则表达式.md
+++ b/正则表达式.md
@@ -129,6 +129,12 @@ Out[8]: ['the', 'best', 'things', 'are', 'the', 'best']
 
 #### finditer 函数  
 
+坐标元组：item.span()    
+坐标开始：item.start()  
+坐标结束：item.end()   
+匹配文字：item.group()   
+
+
 查找 keyword_idx  
 
 ```python 
