--- a/新电脑配置.md
+++ b/新电脑配置.md
@@ -24,6 +24,13 @@ https://www.126g.com/soft/2085.html#
 
 ### 安装破解 PyCharm   
 
+去 PyCharm 官网下载对应版本：https://www.jetbrains.com/pycharm/download/other.html    
+
+卸载的时候不要删除原有配置    
+
+安装新的 pycharm，选项全部勾选。   
+
+
 百度网盘    
 
 
