--- a/正则表达式.md
+++ b/正则表达式.md
@@ -189,6 +189,36 @@ In [3]: re.search('http:(.*?)\'', s).group()[:-1]
 Out[3]: 'http://www.iesdouyin.com/share/video/7107858239643045124'
 ```   
 
+### 提取需要的文字    
+
+```python 
+s = """             <option value="1">帕萨特</option>
+                    <option value="2">朗逸</option>
+                    <option value="3">猛禽</option>
+                    <option value="4">红烧牛肉面</option>
+                    <option value="5">卡罗拉</option>
+    """
+
+In [18]: re.search('value="(.*?)">(.*?)<', s).group()
+Out[18]: 'value="1">帕萨特<'
+
+In [14]: re.findall('value="(.*?)">(.*?)<', s)
+Out[14]: [('1', '帕萨特'), ('2', '朗逸'), ('3', '猛禽'), ('4', '红烧牛肉面'), ('5', '卡罗拉')]
+
+In [19]: li = re.findall('value="(.*?)">(.*?)<', s)
+
+In [20]: d = {}
+
+In [21]: for item in li:
+    ...:     d[item[0]] = item[1]
+    ...: 
+
+In [22]: d
+Out[22]: {'1': '帕萨特', '2': '朗逸', '3': '猛禽', '4': '红烧牛肉面', '5': '卡罗拉'}
+
+```
+
+
 ### 多个连续的空行换成一个空行   
 
 ```python 
