--- a/正则表达式.md
+++ b/正则表达式.md
@@ -231,21 +231,44 @@ Out[22]: {'1': '帕萨特', '2': '朗逸', '3': '猛禽', '4': '红烧牛肉面'
 ### 多个连续的空行换成一个空行   
 
 ```python 
-In [22]: s = "第一段\n\n\n\n\n第二段"
-
-In [23]: s
-Out[23]: '第一段\n\n\n\n\n第二段'
-
 In [24]: import re
 
 In [25]: s = "第一段\n\n\n\n\n第二段"
 
-In [26]: s
-Out[26]: '第一段\n\n\n\n\n第二段'
-
 In [27]: re.sub('\n+', '\n', s)
 Out[27]: '第一段\n第二段'
 ``` 
+
+### 匹配站点名和 site_id  
+
+```python 
+In [1]: import re
+
+In [2]: s = """微博 site id对应2
+   ...: 懂车帝 site id对应625751
+   ...: 汽车之家 site id对应12
+   ...: 今日头条 site id对应50998
+   ...: 西瓜视频 site id对应71809"""
+
+In [3]: re.findall(r"(.*?) site id对应(\d+)", s)
+Out[3]: 
+[('微博', '2'),
+ ('懂车帝', '625751'),
+ ('汽车之家', '12'),
+ ('今日头条', '50998'),
+ ('西瓜视频', '71809')]
+
+In [4]: li = re.findall(r"(.*?) site id对应(\d+)", s)
+
+In [5]: d = {}
+
+In [6]: for item in li:
+   ...:     d[item[0]] = int(item[1])
+
+In [7]: print(d)
+{'微博': 2, '懂车帝': 625751, '汽车之家': 12, '今日头条': 50998, '西瓜视频': 71809}
+```
+
 
 
 文本无所不在，所以正则表达式的应用范围非常广泛；正则表达式是非常强大的，可以被反复使用的工具；正则表达式的解决方案相比于其他的方案是最简单的  
