--- a/正则表达式.md
+++ b/正则表达式.md
@@ -242,6 +242,7 @@ Out[27]: '第一段\n第二段'
 ### 匹配站点名和 site_id  
 
 ```python 
+# 主要是两步，一步是正则提取，一步是转换成字典格式  
 In [1]: import re
 
 In [2]: s = """微博 site id对应2
