--- a/正则表达式.md
+++ b/正则表达式.md
@@ -21,6 +21,15 @@ for line in s.splitlines():
 ```   
 
 
+### 匹配 url 和 site_id   
+
+```python 
+r = re.findall(r"'url': u'(.*?)', (.*?)'site_id': '(.*?)', ", line)
+
+url, site_id = r[0][0], r[0][2]    
+```
+
+
 ### 提取需要的文字    
 
 ```python 
