--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,5 +1,20 @@
 # 实际例子   
 
+
+### url 标准模式   
+
+```python 
+In [8]: import re
+
+In [10]: pattern = "https?://(\w*:\w*@)?[-\w.]+(:\d+)?(/([\w/_.]*(\?\S+)?)?)?"
+
+In [12]: s = """链接：http://m.cnbm.net.cn/open/kc3190543295.html"""
+
+In [14]: re.search(pattern, s).group()
+Out[14]: 'http://m.cnbm.net.cn/open/kc3190543295.html'
+```
+
+
 ### 匹配 url  
 
 ```python 
