--- a/正则表达式.md
+++ b/正则表达式.md
@@ -6,12 +6,27 @@
 ```python 
 In [8]: import re
 
-In [10]: pattern = "https?://(\w*:\w*@)?[-\w.]+(:\d+)?(/([\w/_.]*(\?\S+)?)?)?"
+In [10]: pattern = r"https?://(\w*:\w*@)?[-\w.]+(:\d+)?(/([\w/_.-]*(\?\S+)?)?)?"
 
 In [12]: s = """链接：http://m.cnbm.net.cn/open/kc3190543295.html"""
 
 In [14]: re.search(pattern, s).group()
 Out[14]: 'http://m.cnbm.net.cn/open/kc3190543295.html'
+```
+
+
+### 添加 url 链接 HTML 标签   
+
+重点是在 re.sub 中，对于 url 使用了 re.escape，因为 url 中经常会包含特殊字符，会影响正则匹配。    
+
+```python 
+dec_result = ""
+for line in dec.split("\n"):
+    url = re.search(url_pattern, line)
+    if url:
+        url = url.group()
+        line = re.sub(re.escape(url), "<a href='{}' target='_blank'>{}</a>".format(url, url), line)
+    dec_result += line + "<br>"
 ```
 
 
