--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,6 +1,12 @@
 # 实际例子   
 
 
+### 排除不需要的字符和字符串  
+
+排除不需要匹配的某个字符： 例： \[^\w] 排除匹配中的一个数字或字符串；\[^hello] 排除的是 h、e、l、o 四个字符，不是 hello 字符串   
+排除匹配中不需要的字符串：例：(?!hello|world)    
+
+
 ### url 标准模式   
 
 ```python 
