--- a/正则表达式.md
+++ b/正则表达式.md
@@ -7,6 +7,21 @@
 排除匹配中不需要的字符串：例：(?!hello|world)    
 
 
+### 提取文件名中的品牌名    
+
+```python 
+In [50]: import re
+
+In [51]: s = "吉利15日_20220811165546473515.xls"
+
+In [52]: re.search("(\D+)", s)
+Out[52]: <re.Match object; span=(0, 2), match='吉利'>
+
+In [53]: re.search("(\D+)", s).group()
+Out[53]: '吉利'
+``` 
+
+
 ### url 标准模式   
 
 ```python 
@@ -26,6 +41,7 @@ Out[14]: 'http://m.cnbm.net.cn/open/kc3190543295.html'
 重点是在 re.sub 中，对于 url 使用了 re.escape，因为 url 中经常会包含特殊字符，会影响正则匹配。    
 
 ```python 
+url_pattern = r"https?://(\w*:\w*@)?[-\w.]+(:\d+)?(/([\w/_.-]*(\?\S+)?)?)?"
 dec_result = ""
 for line in dec.split("\n"):
     url = re.search(url_pattern, line)
