--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,6 +1,34 @@
 # 实际例子   
 
 
+### 提取需要的文字  
+
+只用 search 不行，匹配的太长了，不是自己想要的。      
+
+默认使用 findall。    
+
+```python 
+In [135]: import re
+
+In [136]: s = "if param_dict.keyword:"
+
+In [137]: re.search(r"if param_dict.(.*?):", s)
+Out[137]: <re.Match object; span=(0, 22), match='if param_dict.keyword:'>
+
+In [138]: re.search(r"if param_dict.(.*?):", s).group()
+Out[138]: 'if param_dict.keyword:'
+
+In [139]: re.findall(r"if param_dict.(.*?):", s)
+Out[139]: ['keyword']
+
+In [140]: re.search(r"(?<=if param_dict.)(.*?)(?=:)", s)  # 排除前后自己不要的文本    
+Out[140]: <re.Match object; span=(14, 21), match='keyword'>
+
+In [141]: re.search(r"(?<=if param_dict.)(.*?)(?=:)", s).group()
+Out[141]: 'keyword'
+```
+
+
 ### 排除不需要的字符和字符串  
 
 排除不需要匹配的某个字符： 例： \[^\w] 排除匹配中的一个数字或字符串；\[^hello] 排除的是 h、e、l、o 四个字符，不是 hello 字符串   
