--- a/正则表达式.md
+++ b/正则表达式.md
@@ -262,6 +262,8 @@ repl：就是 replacement，把 pattern 替换成这里指定的词
 string：文章  
 count：替换次数  
 
+其实参数和 replace 是一样的，就是 string.replace(pattern, repl)   
+
 ```python
 In [88]: import re
 
