--- a/正则表达式.md
+++ b/正则表达式.md
@@ -3,9 +3,12 @@
 
 ### 提取需要的文字  
 
-只用 search 不行，匹配的太长了，不是自己想要的。      
 
-默认使用 findall。    
+```python  
+In [242]: re.search(r"if param_dict.(.*?):", s).group(1)
+Out[242]: 'keyword'
+```
+
 
 ```python 
 In [135]: import re
