--- a/正则表达式.md
+++ b/正则表达式.md
@@ -7,6 +7,13 @@
 ```python  
 In [242]: re.search(r"if param_dict.(.*?):", s).group(1)
 Out[242]: 'keyword'
+
+# ?P<name>是参数命名，name为分组的名字。  
+In [245]: re.search(r"if param_dict.(?P<ABC>.*?):", s).group('ABC')
+Out[245]: 'keyword'
+
+In [246]: re.search(r"if param_dict.(?P<ABC>.*?):", s).groupdict()
+Out[246]: {'ABC': 'keyword'}
 ```
 
 
