--- a/正则表达式.md
+++ b/正则表达式.md
@@ -265,14 +265,14 @@ re=regular expression(正则表达式)，sub=substitute(替换)；
 
 re.sub是个正则表达式替换函数，用来实现通过正则表达式，实现比普通字符串的replace更加强大的替换功能；    
 
+re.sub(old, new, string, count=0, flags=0)  
+
 re.sub(pattern, repl, string, count=0, flags=0)  
 
 pattern：文章里的原词  
 repl：就是 replacement，把 pattern 替换成这里指定的词  
 string：文章  
 count：替换次数  
-
-其实参数和 replace 是一样的，就是 string.replace(pattern, repl)   
 
 ```python
 In [88]: import re
