--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,8 +1,34 @@
 # 实际例子   
 
 
-### 提取需要的文字  
+### Excel 两列转换为字典   
 
+```python 
+In [330]: li = """724奥迪
+     ...: 758保时捷
+     ...: 743宝马
+     ...: 764奔驰
+     ...: 788别克
+     ...: 899雷克萨斯
+     ...: 919路虎
+     ...: 979特斯拉
+     ...: 1017雪佛兰
+     ...: 2242蔚来
+     ...: 30094凯迪拉克""".splitlines()
+
+In [331]: d = {}
+
+In [332]: for item in li:
+     ...:     bid = re.search(r"\d+", item).group()  # 数字
+     ...:     name = re.search(r"\D+", item).group()  # 非数字  
+     ...:     d[name] = bid
+
+In [333]: print(d)
+{'奥迪': '724', '保时捷': '758', '宝马': '743', '奔驰': '764', '别克': '788', '雷克萨斯': '899', '路虎': '919', '特斯拉': '979', '雪佛兰': '1017', '蔚来': '2242', '凯迪拉克': '30094'}
+```
+
+
+### 提取需要的文字  
 
 ```python  
 In [242]: re.search(r"if param_dict.(.*?):", s).group(1)
@@ -386,6 +412,19 @@ StopIteration                             Traceback (most recent call last)
 ----> 1 print(next(it))
 
 StopIteration: 
+```
+
+
+#### split 函数   
+
+```python 
+In [322]: item = "724奥迪"
+
+In [323]: re.split("\d+", item)
+Out[323]: ['', '奥迪']
+
+In [324]: re.split("(\d+)", item)
+Out[324]: ['', '724', '奥迪']   # 以数字 split，数字前面没有东西，所以是空字符串  
 ```
 
 
