--- a/正则表达式.md
+++ b/正则表达式.md
@@ -23,8 +23,19 @@ In [332]: for item in li:
      ...:     name = re.search(r"\D+", item).group()  # 非数字  
      ...:     d[name] = bid
 
-In [333]: print(d)
-{'奥迪': '724', '保时捷': '758', '宝马': '743', '奔驰': '764', '别克': '788', '雷克萨斯': '899', '路虎': '919', '特斯拉': '979', '雪佛兰': '1017', '蔚来': '2242', '凯迪拉克': '30094'}
+In [333]: d
+Out[333]: 
+{'奥迪': '724',
+ '保时捷': '758',
+ '宝马': '743',
+ '奔驰': '764',
+ '别克': '788',
+ '雷克萨斯': '899',
+ '路虎': '919',
+ '特斯拉': '979',
+ '雪佛兰': '1017',
+ '蔚来': '2242',
+ '凯迪拉克': '30094'}
 ```
 
 
