--- a/新电脑配置.md
+++ b/新电脑配置.md
@@ -57,7 +57,7 @@ hosts 配置
 
 ### 安装 navicat  
 
-官网下载  
+用百度网盘的软件包，然后看这个教程破解。`https://www.php.cn/blog/detail/21250.html`     
 
 连接 navicat：左上角点击连接 -> 选择 MySQL -> 选择 SSH 选项卡 -> 输入远程主机 IP、端口、用户名和密码（用户名和密码是远程主机的用户名和密码） -> 选择常规选项卡 -> 随便起一个连接名，写一个主机 IP 192.168.241.51（以后可能会改，不确定），端口 3306，输入数据库的用户名和密码 -> 测试连接   
 
