--- a/正则表达式.md
+++ b/正则表达式.md
@@ -466,7 +466,7 @@ https://regex101.com/
 `?` 表示可选，0 次或 1 次，等价于 `{0,1}`，出现不出现都可以。`colou?r 可以匹配 color 或者 colour`    
 `|` 或运算符  
 `\w` 匹配字母、数字、下划线。等价于 \[a-zA-Z0-9_]，这是非常常见的组合，文件名，变量名    
-`\d` digit 匹配一个数字字符。等价于 \[0-9]，`\d+` 表示一个或多个数字    
+`\d` digit 匹配一个数字字符。等价于 \[0-9]，`\d+` 表示一个或多个数字；\d{4}\.\d{2} 整数位 4 位，小数位 2 位；    
 `\D` 等价于 \[^0-9]    
 `\s` 匹配空白符 s space  
 
