--- a/正则表达式.md
+++ b/正则表达式.md
@@ -3,6 +3,31 @@
 
 ### Excel 两列转换为字典   
 
+通用 Excel 
+
+```python 
+In [10]: li = """306240Benz GLS
+    ...: 306239BMW X7
+    ...: 306241Benz GLE
+    ...: 306242Volvo XC90
+    ...: 306243Jeep Grand Cherokee
+    ...: 306244Touareg
+    ...: 306245Expedition""".splitlines()
+
+In [11]: for it in li:
+    ...:     fid = re.search("\d+", it).group()
+    ...:     name = re.search("\D.+", it).group()
+    ...:     print fid, name
+    ...:     
+306240 Benz GLS
+306239 BMW X7
+306241 Benz GLE
+306242 Volvo XC90
+306243 Jeep Grand Cherokee
+306244 Touareg
+306245 Expedition
+```
+
 ```python 
 In [330]: li = """724奥迪
      ...: 758保时捷
