--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,17 +1,13 @@
 # 实际例子   
 
 
-### Excel 两列转换为字典   
+### Excel 列转换为字典   
 
 通用 Excel 
 
 ```python 
 In [10]: li = """306240Benz GLS
     ...: 306239BMW X7
-    ...: 306241Benz GLE
-    ...: 306242Volvo XC90
-    ...: 306243Jeep Grand Cherokee
-    ...: 306244Touareg
     ...: 306245Expedition""".splitlines()
 
 In [11]: for it in li:
@@ -21,12 +17,27 @@ In [11]: for it in li:
     ...:     
 306240 Benz GLS
 306239 BMW X7
-306241 Benz GLE
-306242 Volvo XC90
-306243 Jeep Grand Cherokee
-306244 Touareg
 306245 Expedition
 ```
+
+通用拆分三列    
+
+```python 
+In [20]: li = """303572306240Benz GLS
+    ...: 303571306239BMW X7
+    ...: 303577306245Expedition""".splitlines()
+
+In [21]: for it in li:
+    ...:     ids = re.search("\d+", it).group()
+    ...:     oid = ids[:6]
+    ...:     fid = ids[6:]
+    ...:     name = re.search("\D.+", it).group()
+    ...:     print oid, fid, name
+    ...:     
+303572 306240 Benz GLS
+303571 306239 BMW X7
+303577 306245 Expedition
+```  
 
 ```python 
 In [330]: li = """724奥迪
