--- a/正则表达式.md
+++ b/正则表达式.md
@@ -3,7 +3,17 @@
 
 ### Excel 列转换为字典   
 
-通用 Excel 
+通用 Excel 读取 oid，fid 和 name  
+
+```python 
+import pandas as pd
+
+
+df = pd.read_clipboard(header=None).rename(columns={0: "oid", 1: "fid", 2: "name"})
+print(df)
+```
+
+
 
 ```python 
 In [10]: li = """306240Benz GLS
