--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,6 +1,11 @@
 # 实际例子   
 
 
+
+### PyCharm 控制台统计时间    
+
+`top_cluster_posts add idx cost: [^0]`    
+
 ### Excel 列转换为字典   
 
 通用 Excel 读取 oid，fid 和 name  
