--- a/正则表达式.md
+++ b/正则表达式.md
@@ -8,6 +8,33 @@ SQL 时间大于 1s 的：`^\([^0]`
 
 `top_cluster_posts add idx cost: [^0]`    
 
+
+### 提取需要的内容     
+
+有时候需要 pattern 的所有内容，有时候需要 pattern 的部分内容。如果是所有，就不写捕捉，如果是部分，就捕捉。     
+
+所有：   
+
+```python 
+In [10]: re.findall("yangshi_.*?xlsx", t)
+Out[10]: 
+[u'yangshi_2023-04-07-20-45.xlsx',
+ u'yangshi_2023-04-07-20-45.xlsx',
+ ......]
+``` 
+
+部分：     
+
+```python 
+In [11]: re.findall("yangshi_(.*?)xlsx", t)
+Out[11]: 
+[u'2023-04-07-20-45.',
+ u'2023-04-07-20-45.',
+ ......]    
+```
+
+
+
 ### Excel 列转换为字典   
 
 通用 Excel 读取 oid，fid 和 name  
