--- a/正则表达式.md
+++ b/正则表达式.md
@@ -16,7 +16,7 @@ SQL 时间大于 1s 的：`^\([^0]`
 所有：   
 
 ```python 
-In [10]: re.findall("yangshi_.*?xlsx", t)
+In [10]: re.findall("yangshi_.*?xlsx", text)
 Out[10]: 
 [u'yangshi_2023-04-07-20-45.xlsx',
  u'yangshi_2023-04-07-20-45.xlsx',
@@ -26,7 +26,7 @@ Out[10]:
 部分：     
 
 ```python 
-In [11]: re.findall("yangshi_(.*?)xlsx", t)
+In [11]: re.findall("yangshi_(.*?)xlsx", text)
 Out[11]: 
 [u'2023-04-07-20-45.',
  u'2023-04-07-20-45.',
