--- a/正则表达式.md
+++ b/正则表达式.md
@@ -161,6 +161,8 @@ Out[141]: 'keyword'
 排除不需要匹配的某个字符： 例： \[^\w] 排除匹配中的一个数字或字符串；\[^hello] 排除的是 h、e、l、o 四个字符，不是 hello 字符串   
 排除匹配中不需要的字符串：例：(?!hello|world)    
 
+单词里包含 comment，但是不要 is_comment：`(?<!is_)comment`      
+
 
 ### 提取文件名中的品牌名    
 
