--- a/正则表达式.md
+++ b/正则表达式.md
@@ -163,7 +163,7 @@ Out[141]: 'keyword'
 
 单词里包含 comment，但是不要 is_comment：`(?<!is_)comment` 这种只能排除挨着的字符，跨字符是不行的。            
 
-排除跨字符的，比如包含 community，但是不要 from models.community import Entry，就是不要包含 from。`(?<!\bfrom.+)\bcommunity\b`   
+排除跨字符的，比如包含 community，但是不要 `from models.community import Entry`，就是不要包含 from。`(?<!\bfrom.+)\bcommunity\b`   
 
 
 ### 提取文件名中的品牌名    
