--- a/正则表达式.md
+++ b/正则表达式.md
@@ -380,7 +380,28 @@ Out[3]: (10, 13)
 re.match 只匹配字符串的开始，如果字符串开始不符合正则表达式，则匹配失败，函数返回 None；而 re.search 匹配整个字符串，直到找到一个匹配。  
 
 
+
+在 Python2 里，不能通过 Unicode 的 pattern 去 search str 类型的文本：   
+
+```python
+In [6]: s = u"专注就是 say no"
+
+In [7]: re.search(u"专注", s)
+Out[7]: <_sre.SRE_Match at 0x7f2e4d838bf8>
+
+In [8]: 
+
+In [8]: s1 = "专注就是 say no"
+
+In [9]: re.search(u"专注", s1)
+
+In [10]: 
+```
+
+
 #### sub 函数  
+
+sub 完要赋值，和 replace 是一样的。     
 
 re=regular expression(正则表达式)，sub=substitute(替换)；  
 
