--- a/正则表达式.md
+++ b/正则表达式.md
@@ -166,6 +166,9 @@ Out[141]: 'keyword'
 排除跨字符的，比如包含 community，但是不要 `from models.community import Entry`，就是不要包含 from。`(?<!\bfrom.+)\bcommunity\b`   
 
 
+包含 screen_show 但是前面不包含 # `(?<=[\r\n])[^#\r\n]*screen_show[^\r\n]*`     
+
+
 ### 提取文件名中的品牌名    
 
 ```python 
