--- a/新电脑配置.md
+++ b/新电脑配置.md
@@ -57,7 +57,7 @@ hosts 配置
 
 ### 安装 navicat  
 
-（这个好像现在是出问题了，不能用了）
+（这个好像现在是出问题了，不能用了；这个方法是可以的，按照下面的教程操作）      
 
 用百度网盘的软件包，然后看这个教程破解。`https://www.php.cn/blog/detail/21250.html`     
 
