--- a/新电脑配置.md
+++ b/新电脑配置.md
@@ -3,12 +3,13 @@
 
 百度网盘 软件 下载 Windows 10 数字永久激活工具 v1.3.4 点击激活就可以   
 
+或者：`https://github.com/TGSAN/CMWTAT_Digital_Edition` 管理员权限运行。    
+
+
 
 ### 安装谷歌上网助手  
 
-https://www.126g.com/soft/2085.html#  
-
-或者是去百度网盘上下载，百度网盘路径是 软件/chrome扩展/nonmafimegllfoonjgplbabhmgfanaka-2.5.8  
+去百度网盘上下载，百度网盘路径是 软件/chrome扩展/nonmafimegllfoonjgplbabhmgfanaka-2.5.8  
 
 登录谷歌上网助手  
 
@@ -57,7 +58,7 @@ hosts 配置
 
 ### 安装 navicat  
 
-（这个好像现在是出问题了，不能用了；这个方法是可以的，按照下面的教程操作）      
+（这个好像现在是出问题了，不能用了；这个方法是可以的，按照下面的教程操作；不行，操作是最后一步生成的激活码失效；可以用，激活码失效，也可以进软件）       
 
 用百度网盘的软件包，然后看这个教程破解。`https://www.php.cn/blog/detail/21250.html`     
 
